# server.js
@@ -1,26 +1,68 @@
 const express = require('express');
 const bodyParser = require('body-parser');
 const mongodb = require('./data/database');
+const passport = require('passport');
+const session = require('express-session');
+const GitHubStrategy = require('passport-github2').Strategy;
+const cors = require('cors');
 const port = process.env.PORT || 3000;
-
 const app = express();
 
-//create a route
-app.use(bodyParser.json());
 
-app.use((req, res, next) => {
-    res.header("Access-Control-Allow-Origin", "*");
-    res.setHeader(
-        'Access-Control-Allow-Headers',
-        'Origin, X-RequestedWith, Content-Type, Accept, Z-Key'
-   
-    );
-    res.setHeader('Access-Control-Allow-Methods','GET, POST, PUT, DELETE, OPTIONS');
-    next();
+app
+    .use(bodyParser.json())
+    .use(session({
+        secret: 'secret', 
+        resave: false, 
+        saveUninitialized: true,
+    }))
+    // This is the basic express session({..}) initialization.
+    .use(passport.initialize())
+    // init passport on every rout call
+    .use(passport.session())
+    // allow passport to use "express session".
+    .use((req, res, next) => {
+        res.setHeader("Access-Control-Allow-Origin", "*");
+        res.setHeader(
+            'Access-Control-Allow-Headers',
+            'Origin, X-RequestedWith, Content-Type, Accept, Z-Key'
+        );
+        res.setHeader('Access-Control-Allow-Methods','GET, POST, PUT, DELETE, OPTIONS');
+        next();
+    })
+    .use(cors({ methods: ['GET', 'POST', 'DELETE', 'UPDATE', 'PUT', 'PATH']}))
+    .use(cors( { origin: '*' } ))
+    .use('/', require('./routes'));
+
+passport.use(new GitHubStrategy({
+    clientID: process.env.GITHUB_CLIENT_ID,
+    clientSecret: process.env.GITHUB_CLIENT_SECRET,
+    callbackURL: process.env.CALLBACK_URL
+},
+function(accessToken, refreshToken, profile, done) {
+    //User.findOrCreate({ githubId: profile.id}, function(err, user) {
+    return done(null, profile);
+    //});
+    }
+)),
+
+passport.serializeUser((user, done) => {
+    done(null, user);
 });
+passport.deserializeUser((user, done) => {
+    done(null, user);
+})
 
+app.get('/', (req, res) => {
+    res.send(req.session.user !== undefined ? `Logged in as ${req.session.user.displayName}`: "Logged Out");
+})
 
-app.use('/', require('./routes'));
+app.get('/github/callback', passport.authenticate('github', {
+    failureRedirect:'/api-docs', session: false}),
+(req, res) => {
+    req.session.user = req.user;
+    res.redirect('/');
+});
 
 // Handle uncaught exceptions
 process.on('uncaughtException', (err, origin) => {
